# ImageEditorQT

./: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  README.md  main.cpp
